--- a/_posts/titanic.ipynb
+++ b/_posts/titanic.ipynb
@@ -1463,28 +1463,8 @@
     "    }\n",
     ")\n",
     "\n",
-    "submission.to_csv(\"data/titanic_submission.csv\", index=False)\n",
+    "submission.to_csv(\"data/titanic_submission.csv\", index=False) # both score about 0.72\n",
     "submission_sgd.to_csv(\"data/titanic_submission_sgd.csv\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Pclass', 'Age', 'SibSp', 'Parch', 'Fare', 'Sex_female', 'Sex_male',\n       'FamilySize_Extreme', 'FamilySize_Large', 'FamilySize_Single',\n       ...\n       'Title_Mlle', 'Title_Mme', 'Title_Mr', 'Title_Mrs', 'Title_Ms',\n       'Title_Rev', 'Title_Sir', 'Embarked_C', 'Embarked_Q', 'Embarked_S'],\n      dtype='object', length=177)"
-      ]
-     },
-     "execution_count": 91,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_fewer_columns.columns"
    ]
   },
   {
